--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <head>
-    <script src="main.js"></script>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <script src="/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="/Main.css">
 </head>
 
-<body>
+<body style="background-color: #121212">
     <div class="div2">
         <div onclick="clearBoard()">Reset</div>
         <div style="width: 25px;"></div>
